cloudformation/squarefoot/legacy-frontend.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Web Stack
Parameters:
  BackupBucketName:
    Description: Name of the S3 backup bucket
    Type: String
  RackSpaceBackupBucketName:
    Description: Name of the S3 backup bucket from RackSpace
    Type: String
  ReportingDatabase:
    Description: Endpoint of the Reporting Database
    Type: String
  AvailabilityZones:
    Description: The availability zones in the VPC
    Type: CommaDelimitedList
  AppPort:
    Description: Application Http port to listen on
    Type: String
  PublicSubnets:
    Description: The public subnets in the VPC
    Type: CommaDelimitedList
  PrivateSubnets:
    Description: The private subnets in the VPC
    Type: CommaDelimitedList
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access
    Type: String
  HostedZoneName:
    Description: The Route53 Zone in which to create records
    Type: String
  RecordName:
    Description: The name of the DNS record to create.
    Type: String
  AMI:
    Description: The AMI id of the Platform image.
    Type: String
    MinLength: '12'
    MaxLength: '12'
    AllowedPattern: ami-[a-f0-9]{8}
  InstanceType:
    Description: The Instance type which used to build stack.
    Type: String
  VpcID:
    Description: The private Subnet ID in VPC that has connection to Equinix.
    Type: String
    AllowedPattern: vpc-[a-f0-9]{8}
  ASGMaxSize:
    Description: AutoScaling max size
    Type: Number
  ASGMinSize:
    Description: AutoScaling min size
    Type: Number
  VpcNet:
    Description: VPC CidrIp
    Type: String
  NewRelicLicenseKey:
    Description: New Relic License Key
    Type: String
  PagerDutyArn:
    Description: pager duty arn.
    Type: String
  SSLCertArn:
    Description: ssl cert arn
    Type: String
Resources:
  Role:
    Type: AWS::IAM::Role
    Properties:
      Path: /
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
              - "ec2.amazonaws.com"
          Action:
            - sts:AssumeRole
      Policies:
      - PolicyName: permit-s3-and-cfn
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action: cloudformation:DescribeStackResource
            Resource: '*'
          - Effect: Allow
            Action:
             - s3:Put*
            Resource:
             - !Join ['', ['arn:aws:s3:::', !Ref 'BackupBucketName',/*]]
          - Effect: Allow
            Action:
             - s3:Get*
            Resource:
             - !Join ['', ['arn:aws:s3:::', !Ref 'RackSpaceBackupBucketName',/*]]
          - Effect: Allow
            Action: s3:List*
            Resource:
             - !Join ['', ['arn:aws:s3:::', !Ref 'BackupBucketName']]
             - !Join ['', ['arn:aws:s3:::', !Ref 'RackSpaceBackupBucketName']]
  Profile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
      - !Ref 'Role'
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allowing Web client connection
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
      VpcId: !Ref 'VpcID'
  WebSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allowing incoming on ssh port
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: '-1'
        FromPort: '0'
        ToPort: '0'
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
      VpcId: !Ref 'VpcID'
  WebELB:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      Subnets: !Ref 'PublicSubnets'
      Scheme: internet-facing
      CrossZone: true
      SecurityGroups:
      - !Ref 'WebSecurityGroup'
      Listeners:
      - InstancePort: '80'
        LoadBalancerPort: !Ref 'AppPort'
        Protocol: HTTP
      - InstancePort: '80'
        LoadBalancerPort: '443'
        Protocol: HTTPS
        SSLCertificateId: !Ref 'SSLCertArn'
      HealthCheck:
        Target: "HTTP:80/unprotected/status.php"
        HealthyThreshold: '3'
        UnhealthyThreshold: '3'
        Interval: '30'
        Timeout: '5'
  CPUAlarmHigh:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: '2'
      Statistic: Average
      Threshold: '70'
      AlarmDescription: CPU utilization of Web is over 70%.
      Period: '60'
      AlarmActions:
      - !Ref 'PagerDutyArn'
      InsufficientDataActions:
      - !Ref 'PagerDutyArn'
      OKActions:
      - !Ref 'PagerDutyArn'
      Namespace: AWS/EC2
      Dimensions:
      - Name: AutoScalingGroupName
        Value: !Ref 'WebASGroup'
      ComparisonOperator: GreaterThanThreshold
      MetricName: CPUUtilization
  WebASLaunchConf:
    Type: AWS::AutoScaling::LaunchConfiguration
    Metadata:
      AWS::CloudFormation::Init:
        config:
          files:
            /etc/cfn/cfn-hup.conf:
              content: !Sub |
                [main]
                stack=${AWS::StackId}
                region=${AWS::Region}
                interval=1
            /etc/cfn/hooks.d/cfn-auto-reloader.conf:
              content: !Sub |
                [cfn-auto-reloader-hook]
                triggers=post.update
                path=Resources.WebASLaunchConf.Metadata.AWS::CloudFormation::Init
                action=/opt/aws/bin/cfn-init -s ${AWS::StackName}  -r WebASLaunchConf  --role ${Role} --region #{AWS::Region} runas=root
            /etc/logrotate.d/httpd:
              content: !Sub |
                /var/log/httpd/*log {
                    missingok
                    notifempty
                    sharedscripts
                    postrotate
                        /sbin/service httpd reload > /dev/null 2>/dev/null || true
                    endscript
                }
            /etc/logrotate.d/s3_img_upload_csv:
              content: !Sub |
                /var/www/html/admin/app/tmp/s3_img_upload_csv/*log {
                    missingok
                    notifempty
                    sharedscripts
                    postrotate
                        /sbin/service httpd reload > /dev/null 2>/dev/null || true
                    endscript
                }
            /root/backup_www_to_s3.sh:
              content: !Sub |
                #!/usr/bin/env bash
                #echo 'creating archive'
                #tar -zcvf legacy-web.tar.gz --exclude='/var/www/html/admin/app/webroot/img/Image' --exclude='/var/www/html/corn/google_remarketing' --exclude='/var/www/html/corn/emarsys' /var/www/html
                echo "Syncing to s3..."
                aws s3 sync /var/www/html s3://${BackupBucketName}/legacy-web-aws-backup/html --exclude='/var/www/html/admin/app/webroot/img/Image/*' --exclude='/var/www/html/corn/google_remarketing/*' --exclude='/var/www/html/corn/emarsys/*' --region ap-southeast-1
                aws s3 sync /etc/httpd s3://${BackupBucketName}/legacy-web-aws-backup/httpd --exclude='/etc/httpd/logs/*' --region ap-southeast-1
          services:
            sysvinit:
              cfn-hup:
                enabled: 'true'
                ensureRunning: 'true'
                files:
                - /etc/cfn/cfn-hup.conf
                - /etc/cfn/hooks.conf
    Properties:
      InstanceType: !Ref 'InstanceType'
      ImageId: !Ref 'AMI'
      SecurityGroups:
      - !Ref 'WebSecurityGroup'
      - !Ref 'WebSSHSecurityGroup'
      KeyName: !Ref 'KeyName'
      IamInstanceProfile: !Ref 'Profile'
      BlockDeviceMappings:
      - DeviceName: /dev/xvda
        Ebs:
          VolumeSize: '500'
          VolumeType: gp2
          DeleteOnTermination: 'true'
      UserData:
        "Fn::Base64": !Sub |
          #!/bin/bash -ex
          exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
          resize2fs /dev/sda1
          function error_exit
          {
            /opt/aws/bin/cfn-signal -e 1 -r $1 ${WaitHandle}
            exit 1
          }
          function await_network {
            while [ $(curl --connect-timeout 2 169.254.169.254 >/dev/null 2>&1; echo $?) -ne 0 ]; do
              echo Waiting for networking and/or DNS
              sleep 10
            done
          }
          function configure_hosts {
            recordName=${RecordName}
            instance_ip=$(curl -q http://169.254.169.254/latest/meta-data/local-ipv4)
            domain=$(awk '/^search/ { print $2 }' /etc/resolv.conf)
            ipend=`echo $instance_ip | sed 's/\./\-/g'`
            echo "$instance_ip $recordName.$domain $recordName-$ipend">> /etc/hosts
            hostname $recordName-$ipend
          }
          await_network
          configure_hosts

          /opt/aws/bin/cfn-init -s ${AWS::StackName} -r WebASLaunchConf  --region ${AWS::Region} || error_exit 'Failed to run cfn-init'
          /opt/SumoCollector/collector stop
          /etc/init.d/newrelic-sysmond restart
          mkdir -p /var/www/html

          # Start up the cfn-hup daemon to listen for changes
          /opt/aws/bin/cfn-hup || error_exit 'Failed to start cfn-hup'
          /opt/aws/bin/cfn-signal -e 0 -r "WebInstance instance Stack Complete."  '${WaitHandle}'

          aws s3 sync s3://${RackSpaceBackupBucketName}/legacy-web  /var/www/html --region ${AWS::Region} || error_exit 'unable to download legacy web from s3'
          cd /var/www/html
          find ./ -type f -exec sed -i -e  's/573266-db2.squarefoot.com.hk/rds/g' {} \;
          mkdir -p /var/www/private/consultancy-agent-uploads
          sed -i -e 's/hk-tableau.cjretgqtdl2a.ap-southeast-1.rds.amazonaws.com/${ReportingDatabase}/g' /var/www/html/_config_db_access.php
          
          sed -i -e 's/RewriteCond %{HTTPS} !=on//g' /var/www/html/admin/.htaccess /var/www/html/admin/app/.htaccess /var/www/html/admin/app/webroot/.htaccess
          sed -i -e 's/RewriteCond %{REQUEST_URI} admin//g' /var/www/html/admin/.htaccess /var/www/html/admin/app/.htaccess /var/www/html/admin/app/webroot/.htaccess
          sed -i -e 's/RewriteRule !^(img|css|js|docs)(\$|\/) https:\/\/%{SERVER_NAME}\/admin\/$1 \[NC,R=301,L\]//g' /var/www/html/admin/.htaccess /var/www/html/admin/app/.htaccess /var/www/html/admin/app/webroot/.htaccess
          
          sed -i -e 's/RewriteCond %{HTTPS} !=on//g' /var/www/html/.htaccess
          sed -i -e 's/RewriteCond %{REQUEST_URI} !bob-property-awards-2017//g' /var/www/html/.htaccess
          sed -i -e 's/RewriteCond %{REQUEST_URI} !corn\/api\/capi//g' /var/www/html/.htaccess 
          sed -i -e 's/RewriteCond %{REQUEST_URI} !xml//g' /var/www/html/.htaccess
          sed -i -e 's/RewriteRule !^(img|css|js|docs)(\$|\/) https:\/\/%{SERVER_NAME}%{REQUEST_URI} \[R=301,L\]//g' /var/www/html/.htaccess 

          chown -R apache:apache /var/www/html/static/oasis/report /var/www/html/static/pp/report /var/www/html/corn/emarsys /var/www/html/corn/google_remarketing /var/www/html/xml/asiaclassified /var/www/html/xml/mitula /var/www/html/xml/oncc /var/www/html/xml/trovit /var/www/html/{cmd} /var/www/html/sitemap /var/www/html/images/propertyblog/uploads /var/www/html/images/propertyblog/author_uploads /var/www/html/admin/app/webroot/img/Image /var/www/html/admin/app/tmp /var/www/private/consultancy [...]
          service httpd start
  WebASGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones: !Ref 'AvailabilityZones'
      VPCZoneIdentifier: !Ref 'PrivateSubnets'
      LaunchConfigurationName: !Ref 'WebASLaunchConf'
      MinSize: !Ref 'ASGMinSize'
      MaxSize: !Ref 'ASGMaxSize'
      LoadBalancerNames:
      - !Ref 'WebELB'
      Tags:
      - Key: CloudFormationStack
        Value: !Ref 'AWS::StackName'
        PropagateAtLaunch: true
      - Key: Name
        Value: !Join ['', [!Ref 'RecordName', ., !Ref 'HostedZoneName', .]]
        PropagateAtLaunch: true
  WebRecordSet:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName:  !Join ['', [!Ref 'HostedZoneName', '.']]
      Comment: DNS name for Web
      Name: !Join ['', [!Ref 'RecordName', ., !Ref 'HostedZoneName', .]]
      Type: CNAME
      TTL: 60
      ResourceRecords:
      - !GetAtt [WebELB, DNSName]
  WaitHandle:
    Type: AWS::CloudFormation::WaitConditionHandle
  WaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    DependsOn: WebASGroup
    Properties:
      Handle: !Ref 'WaitHandle'
      Timeout: '2700'
Outputs:
  ELBEndpoint:
    Description: Web elb dns name.
    Value: !GetAtt [WebELB, DNSName]
  ServiceEndpoint:
    Description: Web endpoint.
    Value: !Join ['', [!Ref 'RecordName', ., !Ref 'HostedZoneName', .]]
